--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: rgb(101, 209, 210);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  width: 500px;
+  height: 200px;
+  float: left;
+}
+.demo-text{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  font-size: 50px;
+ overflow: hidden;
+ margin-left: 20px;
+ margin-right: 20px;
+ margin-bottom: 40px;
+}
+.field-text{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 40px;
+}
+.input-text{
+  width:100%;
+  height: 60px;
+}
+
+.div-go-button{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
+  width: 200px;
+  height: 70px;
+  float: left;
+  }
+
+.go-button{
+  width: 50px;
+  height: 50px;
 }
