get current bodyBackgroundColor as props to Settings page for colorTheme

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(101, 209, 210);
+  background-color: aqua;
 }
 
 .logo{
@@ -59,3 +59,4 @@ background-color: white;
   font-size: 20px;
   border-radius: 10px;
 }
+
